@@ -115,6 +115,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   or 'wikidiff2' but extension is not installed
 * (bug 18326) Chmod errors in file repos have been hidden
 * (bug 18718) Comma after a } create a error in IE
+* (bug 18716) Removed redundant class in Modern skin CSS for category links and
+  tweaked spacing.
 
 == API changes in 1.16 ==
 
